--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,16 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    toile_dir: '%kernel.project_dir%/public/photos/decoMurale/toile'
+    mdf_dir: '%kernel.project_dir%/public/photos/decoMurale/mdf'
+    cadre_dir: '%kernel.project_dir%/public/photos/decoMurale/cadre'
+    textile_dir: '%kernel.project_dir%/public/photos/cadeau/textile'
+    mugs_dir: '%kernel.project_dir%/public/photos/cadeau/mugs'
+    tasseMagique_dir: '%kernel.project_dir%/public/photos/cadeau/tasseMagique'
+    standard_dir: '%kernel.project_dir%/public/photos/tirage/standard'
+    grandeQuantite_dir: '%kernel.project_dir%/public/photos/tirage/grandeQuantite'
+    identite_dir: '%kernel.project_dir%/public/photos/tirage/identite'
+    agrandissement_dir: '%kernel.project_dir%/public/photos/Agrandissement'
 services:
     # default configuration for services in *this* file
     _defaults:
