--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/pixphoto2022"
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://127.0.0.1:1025
 ###< symfony/mailer ###
